src/test/scala/au/edu/mq/comp/perentiemq/iml/prederr6.iml
// Non-associative operator
def prederr1(a) : (b) {
    assert (a > b > c);
}
